# rfu

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  robots.txt  sitemap.py  sitemap.xml
.github/workflows/: python-app.yml
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
locale/pl/LC_MESSAGES/: django.mo  django.po
locale/ua/LC_MESSAGES/: django.mo  django.po
rfu/: asgi.py  context_processors.py  settings.py  sitemap.py  test.py  urls.py  views.py  wsgi.py
rfu/about/: admin.py  apps.py  models.py  views.py
rfu/about/migrations/: 0001_initial.py  0002_alter_pressrelease_link.py
rfu/blog/: admin.py  apps.py  models.py  views.py
rfu/blog/migrations/: 0001_initial.py  0002_blogpost_likes.py  0003_alter_blogpost_content.py  0004_blogpost_date.py  0005_blogimage.py  0006_blogpost_content_de_blogpost_content_en_and_more.py  0007_remove_blogpost_content_de_and_more.py
rfu/card/: admin.py  apps.py  models.py
rfu/card/migrations/: 0001_initial.py
rfu/extended_flatpages/: admin.py  apps.py  models.py
rfu/extended_flatpages/migrations/: 0001_initial.py
rfu/main_page/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py  widgets.py
rfu/main_page/migrations/: 0001_initial.py  0002_mission_paymentmethod_socialnetwork.py  0003_remove_webhero_button_remove_webhero_mission_and_more.py  0004_paymentmethod_description.py  0005_alter_card_description_alter_footer_address_and_more.py  0006_partner_name_alter_partner_logo.py  0007_remove_card_description_remove_card_title_and_more.py  0008_remove_card_description_text_id_and_more.py  0009_crypto_alter_webhero_options_remove_webhero_image_and_more.py  0010_alter_paymentmethod_image.py  0011_alter_paymentmethod_link.py  0012_alter_paymentmethod_image_alter_paymentmethod_link.py  0020_alter_mission_image.py  (+18 more)
rfu/media/: admin.py  apps.py  models.py  views.py
static/: app.js  ga.js  main.css
templates/: 404.html  GDPR.html  about.html  base.html  blog.html  cookie_policy.html  footer.html  index.html  manage_page.html  navbar.html  robots.txt
templates/blog/: blog.html
templates/cookie_consent/: manage_bar.html  start_banner.html
templates/flatpages/: default.html
templates/main/: base.html  footer.html  index.html  navbar.html
templates/smi/: smi.html
(+17 files in other folders)
