[tool.poetry]
name = "rfu"
version = "0.1.0"
description = ""
authors = ["Nikolai <nicolas.gordienko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.1.2"
django-ckeditor = "^6.7.0"
django-treebeard = "^4.7"
django-cms = "^3.11.4"
django-menus = "^1.1.2"
menus = "^0.2.0"
cms = "^0.0.2"
treebeard = "^0.1.1"
django-cookie-consent = "^0.4.0"
django = "~4.1.0"


[tool.poetry.group.dev.dependencies]
django-bootstrap4 = "^23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.8"
dj-database-url = "^2.1.0"
django-filter = "^23.3"
whitenoise = "^6.5.0"
flake8 = "^6.1.0"
django-test = "^0.4030"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
